...
        R.drawable.letter_i,
        R.drawable.letter_f,
        R.drawable.letter_y
    )

    // Welcome text to display
    val welcomeText = "Welcome to Signify"

    // Indexes of the letters to highlight
    val highlightIndices = listOf(11, 12, 13, 14, 15, 16, 17)

    // State to keep track of the current image index
    var currentImage by remember { mutableIntStateOf(0) }
...
